# geekmagic-hacs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  hacs.json  pyproject.toml  test_visual.py
.claude/: settings.local.json
.github/workflows/: ci.yml  samples.yml
custom_components/geekmagic/: __init__.py  camera.py  config_flow.py  connection_backoff.py  const.py  coordinator.py  device.py  display_state.py  emoji.py  image.py  manifest.json  panel.py  preview.py  profiles.py  render_context.py  renderer.py  screen_builder.py  services.yaml  strings.json  text_shaping.py  websocket.py
docs/: markdown-support-investigation.md
scripts/: debug_render.py  device_cli.py  frontend-run.sh  generate_layout_samples.py  generate_samples.py  generate_widget_samples.py  mock_hass.py  sync_ha_icons.py
tests/: __init__.py  conftest.py  test_config_flow.py  test_connection_backoff.py  test_coordinator.py  test_coordinator_media_images.py  test_device.py  test_device_cli.py  test_display_state.py  test_emoji.py  test_entities.py  test_frontend_contract.py  test_ha_integration.py  test_notification.py  test_profiles.py  test_render_context.py  test_renderer.py  test_screen_builder.py  test_text_shaping.py  test_watchos_design_system.py  test_websocket.py  test_widget_state_builder.py
tests/drivers/: test_detection.py  test_sdpro_driver.py  test_stock_driver.py
tests/entities/: test_entities.py
tests/layouts/: __init__.py  test_layouts.py
tests/widgets/: __init__.py  test_candlestick.py  test_components.py  test_flex.py  (+1 more)
(+50 files in other folders)
